# src/routes/Auth.ts
@@ -2,11 +2,9 @@ import * as express from 'express'
 import User from 'models/User'
 import * as multer from 'multer'
 import AuthController from 'src/controllers/authController'
-import { AuthMiddleware, configAuth } from '../lib/passport'
+import AuthMiddleware from 'src/middlewares/authmiddleware'
 
-export function Route(app: express.Application, root: express.Router) {
-  configAuth(app)
-
+export function Route(root: express.Router) {
   const router = express.Router()
   const controller = new AuthController()
   const upload = multer()
@@ -19,15 +17,13 @@ export function Route(app: express.Application, root: express.Router) {
     AuthMiddleware,
     function (req: express.Request, res: express.Response) {
       const response = controller.login(req.user! as string)
-      res.json(response)
+      res.status(response.status).json(response)
     }
   )
 
   router.post('/signup', async function (req: express.Request, res: express.Response) {
-    controller
-      .signup(req.body as User)
-      .then((msg) => res.status(201).json(msg))
-      .catch((err) => res.status(400).json({ message: err.message, status: 400 }))
+    const result = await controller.signup(req.body as User)
+    res.status(result.status).json(result)
   })
 
   // router.post('/recover', async function (_req: express.Request, _res: express.Response) {})
